# lib-mod

Lib-Android/app/src/main/: AndroidManifest.xml
Lib-Android/app/src/main/java/uk/lgl/: MainActivity.java
Lib-Android/app/src/main/jni/: Android.mk  Main.cpp  Menu.h
Lib-Android/app/src/main/res/values/: strings.xml
lib-pc/: CMakeLists.txt  build.gradle
lib-pc/app/: build.gradle
lib-pc/app/src/main/: AndroidManifest.xml
lib-pc/app/src/main/java/: MainActivity.java
lib-pc/include/: hooking.h  mod_interface.h  modmenu.h
lib-pc/mods/: example_mod.cpp
lib-pc/scripts/: build_android.sh
lib-pc/src/: hooking.cpp  main.cpp  modlib.cpp  modlib.h  modmenu.cpp
